add breadcrumb and post view path match

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,8 @@
         <h3 class="text-muted">viki</h3>
       </div>
 
+      <div ng-include="'views/bread.html'"></div>
+
       <div ng-view=""></div>
 
       <div class="footer">
@@ -85,6 +87,9 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/bread.js"></script>
+        <script src="scripts/services/bread.js"></script>
+        <script src="scripts/controllers/post.js"></script>
         <!-- endbuild -->
 </body>
 </html>
