--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/bread.js"></script>
         <script src="scripts/services/bread.js"></script>
         <script src="scripts/controllers/post.js"></script>
+        <script src="scripts/services/cache.js"></script>
         <!-- endbuild -->
 </body>
 </html>
