--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
         <script src="scripts/services/bread.js"></script>
         <script src="scripts/controllers/post.js"></script>
         <script src="scripts/services/cache.js"></script>
+        <script src="scripts/services/ajax.js"></script>
         <!-- endbuild -->
 </body>
 </html>
