add roadmap and its resolver

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
         <script src="scripts/controllers/post.js"></script>
         <script src="scripts/services/cache.js"></script>
         <script src="scripts/services/ajax.js"></script>
+        <script src="scripts/services/roadmap.js"></script>
         <!-- endbuild -->
 </body>
 </html>
