--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
+    <script src="bower_components/markdown/lib/markdown.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
@@ -93,6 +94,7 @@
         <script src="scripts/services/cache.js"></script>
         <script src="scripts/services/ajax.js"></script>
         <script src="scripts/services/roadmap.js"></script>
+        <script src="scripts/services/posthtml.js"></script>
         <!-- endbuild -->
 </body>
 </html>
