--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/marked/lib/marked.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
