fix reload ajax not ready bug

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,8 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <!-- <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p> -->
+        <p>Copy Right 2014-2014</p>
       </div>
     </div>
 
