--- a/app/index.html
+++ b/app/index.html
@@ -22,14 +22,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">viki</h3>
-      </div>
+      <navbar></navbar>
 
       <div ng-include="'views/bread.html'"></div>
 
@@ -98,6 +91,7 @@
         <script src="scripts/services/ajax.js"></script>
         <script src="scripts/services/roadmap.js"></script>
         <script src="scripts/services/posthtml.js"></script>
+        <script src="scripts/directives/navbar.js"></script>
         <!-- endbuild -->
 </body>
 </html>
