--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/highlightjs/styles/monokai_sublime.css" />
+    <link rel="stylesheet" href="bower_components/highlightjs/styles/brown_paper.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -77,6 +77,8 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/marked/lib/marked.js"></script>
     <script src="bower_components/highlightjs/highlight.pack.js"></script>
+    <script src="bower_components/smooth-scroller/dist/smooth-scroller.bower.js"></script>
+    <script src="bower_components/toc/dist/toc.bower.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
