add katex support

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/monokai_sublime.css">
     <!-- endbuild -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.css">
   </head>
   <body ng-app="vikiApp">
     <!--[if lt IE 7]>
@@ -72,6 +73,7 @@
     <script src="bower_components/toc/dist/toc.bower.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.1/katex.min.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
