use api.github.com

--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,7 @@
         <script src="scripts/services/roadmap.js"></script>
         <script src="scripts/services/posthtml.js"></script>
         <script src="scripts/directives/navbar.js"></script>
+        <script src="scripts/services/github.js"></script>
         <!-- endbuild -->
 </body>
 </html>
